# CA-ComMAPPO

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
ca_commappo/: __init__.py  xuance_compat.py
ca_commappo/cli/: __init__.py  run_sanity_baseline.py
ca_commappo/envs/: __init__.py  debug_highway_wrapper.py  highway_intersection.py  highway_intersection_wrapper.py
ca_commappo/evaluation/: __init__.py  highway_metrics.py  mappo_eval_artifacts.py  mappo_highway_metrics.py  mappo_video_recorder.py  sanity_baseline_runner.py  sanity_baselines.py
ca_commappo/networks/: __init__.py  attention_mappo.py
ca_commappo/training/: __init__.py  mappo_highway_intersection.py  mappo_run_layout.py
configs/mappo/: intersection-multi-agent-v1-attention-smoke.yaml  intersection-multi-agent-v1-attention.yaml  intersection-multi-agent-v1-smoke.yaml  intersection-multi-agent-v1.yaml  (+1 more)
docs/: highway_config_update_bug.md  highway_env_faq.md  highway_intersection_mappo_baseline_gap_analysis.md  highway_intersection_notes.md  mappo_model_evaluation_and_video.md  sanity_baselines.md  source_code_analysis.md  thesis-planning.md
examples/: debug_highway_env_episode.py  random_highway_intersection.py
scripts/: clean_cache.sh
tests/: default_config.json  test_attention_mappo.py  test_highway_intersection_adapter.py  test_highway_metrics.py  test_main_entrypoint.py  test_mappo_eval_artifacts.py  test_mappo_highway_intersection.py  test_mappo_highway_metrics.py  test_mappo_run_layout.py  test_mappo_video_recorder.py  test_sanity_baselines.py  test_xuance_compat.py
(+18 files in other folders)
